<resources>
    <string name="app_name">Team20-FinalProject</string>

    <string name="start_game">START GAME</string>
    <string name="roll_a_die">ROLL A DIE</string>
    <string name="settings">SETTINGS</string>
    <string name="current_point">CURRENT POINT:</string>
    <string name="menu">menu</string>
    <string name="start_rolling">TAP OR SHAKE</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="sound_effect">SOUND EFFECT:</string>
    <string name="vibration">VIBRATION:</string>
    <string name="save">SAVE</string>
    <string name="music">MUSIC:</string>
    <string name="background_skin">BACKGROUND SKIN</string>
    <string name="log">LOG</string>
    <string name="home">HOME</string>

    <!--Enemies-->
    <string name="goblin">Goblin</string>
    <string name="dark_cultist">Dark Cultist</string>
    <string name="golem">Golem</string>
    <string name="dragon">Dragon</string>

    <!--Actions-->
    <string name="atk">Attack</string>
    <string name="itm">Items</string>
    <string name="abl">Abilities</string>
    <string name="block">Block </string>
    <string name="rest">Rest</string>

    <string name="roll">Roll</string>
    <string name="player_create">Character Creation</string>
    <string name="question">\?</string>
    <string name="dash">-</string>
    <string name="finish">Finish</string>
    <string name="charName">Character Name</string>

    <!--Stats-->
    <string name="hp">HP</string>
    <string name="sp">SP</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="vit">VIT</string>
    <string name="wis">WIS</string>
    <string name="inte">INT</string>
    <string name="spd">SPD</string>
    <string name="resume">RESUME</string>
    <string name="new_game">NEW GAME</string>
</resources>